Project version complete for mentor review

--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
             <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
                 <!-- Indicators -->
                 <div class="carousel-caption">
-                    <a role="button" data-toggle="collapse" href="#welcome" aria-expanded="false" aria-controls="welcome">Desarollo Cognitivo<br>del Niño</a>
+                    <a role="button" data-toggle="collapse" href="#welcome" aria-expanded="false" aria-controls="welcome" class="wl">Desarollo Cognitivo<br>del Niño</a>
                 </div>
                 <ol class="carousel-indicators">
                     <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
@@ -108,8 +108,8 @@
                     </a>
                     <div class="col-xs-12 col-sm-12 col-md-12 collapse" id="welcome">
                         <div class="well">
-                            <img src="assets/images/image6.png" alt="Anabella" class="col-xs-6 col-sm-3 col-md-3 img-circle" />
-                            <p>El trabajo de proyecto aqui presentado esta motivado en el aprendizaje del desarrollo psicológico de mis nietas, Anabella y Vianca, y basado en la teoría del desarrollo cogntivo, o tambien llamado desarrollo cognoscitivo de
+                            <img src="assets/images/image6.png" alt="Anabella" class="col-xs-12 col-sm-3 col-md-3 img-circle img-responsive" />
+                            <p>El proyecto de pagina Web aqui creado, esta motivado en el aprendizaje del desarrollo psicológico de mis nietas, Anabella y Vianca, basado en la teoría del desarrollo cognitivo, o tambien llamado desarrollo cognoscitivo, de
                                 <a tabindex="0" role="button" data-toggle="popover" data-trigger="focus" title="Jean William Fritz Piaget (1896-1980)" data-content="Famoso por sus aportes al estudio de la infancia y por su teoría constructivista del desarrollo de la inteligencia.">
                                 <span>Jean Piaget</span></a>. La teoría de Piaget es una sobre la naturaleza y el desarrollo de la inteligencia humana. Piaget creía que la infancia del individuo juega un papel vital y activo con el crecimiento de
                                 la inteligencia, y que el niño aprende a través de hacer y explorar activamente. Las fases de desarrollo expuestas por Piaget forman una secuencia de cuatro etapas que a su vez se dividen en otras subetapas. Estas cuatro
@@ -134,7 +134,7 @@
                     <div class="container">
                         <div class="col-xs-12 col-sm-10 col-md-10 collapse" id="collapse-1">
                             <div class="well">
-                                <img src="assets/images/etapa1.jpg" alt="Sensoriomotor" class="col xs-6 col-sm-3 col-md-3" />
+                                <img src="assets/images/etapa1.jpg" alt="Sensoriomotor" class="col-xs-12 col-sm-3 col-md-3 img-responsive" />
                                 <p>La inteligencia de los niños y niñas es práctica, centrada en el sí mismo, y en el momento presente en el aquí y ahora. El niño se relaciona con el mundo a través de los sentidos y la acción. A lo largo de este periodo
                                     se producen importantes adquisiciones, la acción de los bebés evoluciona desde los reflejos innatos, que se convierten en hábitos. Poco después aparecen las <a type="button" class="note" data-toggle="tooltip" data-placement="top"
                                     title="Acciones encaminadas a mantener un resultado.">reacciones circulares</a> y con estas los primeros esquemas mentales. Las seis sub-etapas del periodo sensoriomotor van pasando de una a otra en medida que se van
@@ -275,10 +275,10 @@
                     <div class="container collapse-right">
                         <div class="col-xs-12 col-sm-10 col-sm-offset-2 col-md-10 col-md-offset-2 collapse" id="collapse-2">
                             <div class="well">
-                                <img src="assets/images/etapa2.jpg" alt="Preoperatorio" class="col xs-6 col-sm-3 col-md-3" />
+                                <img src="assets/images/etapa2.jpg" alt="Preoperatorio" class="col-xs-12 col-sm-3 col-md-3 img-responsive" />
                                 <p>Se produce un avance en la forma de pensar. En esta etapa se produce un adelanto extraordinario en la actividad representacional y aparece la función simbólica, los niños y niñas utilizan símbolos para representar objetos,
                                     lugares y personas, puede retroceder y avanzar en el tiempo. El pensamiento va más allá de los actos y los hechos inmediatos. Pero en esta etapa el pensamiento es todavía rudimentario. Durante esta etapa, los niños
-                                    aprenden cómo interactuar con su ambiente de una manera más compleja mediante el uso de palabras y de imágenes mentales. Esta etapa está marcada por el egocentrismo, o la creencia de que todas las personas ven el mundo
+                                    aprenden cómo interactuar con su ambiente de una manera más compleja mediante el uso de palabras y de imágenes mentales.<br><br>Esta etapa está marcada por el egocentrismo, o la creencia de que todas las personas ven el mundo
                                     de la misma manera que él o ella. También creen que los objetos inanimados tienen las mismas percepciones que ellos, y pueden ver, sentir, escuchar, etc. Un segundo factor importante en esta etapa es la Conservación,
                                     que es la capacidad para entender que la cantidad no cambia cuando la forma cambia. Es decir, si el agua contenida en un vaso corto y ancho se vierte en un vaso alto y fino, los niños en esta etapa creerán que el vaso
                                     más alto contiene más agua debido solamente a su altura. Esto es debido a la incapacidad de los niños de entender la reversibilidad y debido a que se centran en sólo un aspecto del estímulo, por ejemplo la altura, sin
@@ -298,7 +298,7 @@
                     <div class="container">
                         <div class="col-xs-12 col-sm-10 col-md-10 collapse" id="collapse-3">
                             <div class="well">
-                                <img src="assets/images/etapa3.jpg" alt="Operaciones Concretas" class="col xs-6 col-sm-3 col-md-3" />
+                                <img src="assets/images/etapa3.jpg" alt="Operaciones Concretas" class="col-xs-12 col-sm-3 col-md-3 img-responsive" />
                                 <p>Es una etapa que se sustenta en los logros de las etapas anteriores y se logran importantes avances en el pensamiento. Los niños y niñas adquieren mayores nociones y superan cualitativamente las posibilidades de su pensamiento.
                                     El pensamiento se convierte en lógico. En esta etapa, comienza el razonamiento, los pensamientos dejan de ser intuitivos y se basan en el razonamiento. Se aplica la lógica y comienza a pensar en lo posible. El pensamiento
                                     es reversible, flexible y mucho más complejo. es la disminución gradual del pensamiento egocéntrico y por la capacidad creciente de centrarse en más de un aspecto de un estímulo. Pueden entender el concepto de agrupar,
@@ -318,10 +318,10 @@
                     <div class="container collapse-right">
                         <div class="col-xs-12 col-sm-10 col-sm-offset-2 col-md-10 col-md-offset-2 collapse" id="collapse-4">
                             <div class="well">
-                                <img src="assets/images/etapa4.jpg" alt="Operaciones Formales" class="col xs-6 col-sm-3 col-md-3" />
+                                <img src="assets/images/etapa4.jpg" alt="Operaciones Formales" class="col-xs-12 col-sm-3 col-md-3 img-responsive" />
                                 <p>Es la etapa final del <a type="button" class="note" data-toggle="tooltip" data-placement="bottom" title="Desde los doce años en adelante.">desarrollo cognitivo</a>, los niños comienzan a desarrollar una visión más abstracta
                                     del mundo y a utilizar la lógica formal. Se logra la abstracción sobre conocimientos concretos observados, lo cual permite emplear el razonamiento lógico inductivo y deductivo. Puede formular hipótesis, tiene en cuenta
-                                    el mundo de lo posible.Pueden aplicar la reversibilidad y la conservación a las situaciones tanto reales como imaginadas. También desarrollan una mayor comprensión del mundo y de la idea de causa y efecto. Esta etapa
+                                    el mundo de lo posible. Pueden aplicar la reversibilidad y la conservación a las situaciones tanto reales como imaginadas. También desarrollan una mayor comprensión del mundo y de la idea de causa y efecto. Esta etapa
                                     se caracteriza por la capacidad para formular hipótesis y ponerlas a prueba para encontrar la solución a un problema. Otra característica del individuo en esta etapa es su capacidad para razonar en contra de los hechos.
                                     Es decir, si le dan una afirmación y le piden que la utilice como la base de una discusión, es capaz de realizar la tarea. Por ejemplo, pueden razonar sobre la siguiente pregunta: ¿Qué pasaría si el cielo fuese rojo?”.</p>
                             </div>
@@ -341,7 +341,7 @@
                     <h5>Comenzando</h5>
                     <ul>
                         <li><a href="#navbar-h">Inicio</a></li>
-                        <li><a href="#welcome-bar">Bienvenida</a></li>
+                        <li><a role="button" data-toggle="collapse" href="#welcome" aria-expanded="false" aria-controls="welcome" class="wl">Bienvenida</a></li>
                         <li><a href="#myContent">Etadios</a></li>
                         <li><a href="#myModalVideo" data-toggle="modal" data-target="#myModalVideo">Videos</a></li>
                     </ul>
@@ -407,7 +407,7 @@
                                 </div>
                                 <div id="collapseEleven" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingEleven">
                                     <div class="panel-body">
-                                        <img src="assets/images/desarrollo-cognitivo.jpg" alt="Desarrollo Cognitivo" class="col xs-6 col-sm-3 col-md-3 img-rounded" />
+                                        <img src="assets/images/desarrollo-cognitivo.jpg" alt="Desarrollo Cognitivo" class="col-xs-12 col-sm-3 col-md-3 img-rounded" />
                                         <p>El <i>Desarrollo Cognitivo</i> se refiere al desarrollo de la capacidad de pensar y razonar. Los niños desarrollan la capacidad de pensar en forma concreta (operaciones concretas) como por ejemplo, combinar (sumar),
                                             separar (restar o dividir), ordenar (alfabéticamente o por clase) y transformar objetos y acciones. Estas operaciones también son llamadas concretas porque los objetos y hechos sobre los que se está pensando
                                             se encuentra físicamente presentes frente al niño.</p>
@@ -426,7 +426,7 @@
                                 </div>
                                 <div id="collapseTwelve" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwelve">
                                     <div class="panel-body">
-                                        <img src="assets/images/Jean_Piaget.png" alt="Jean Piaget (1896-1980)" class="col xs-6 col-sm-3 col-md-3 img-rounded" />
+                                        <img src="assets/images/Jean_Piaget.png" alt="Jean Piaget (1896-1980)" class="col-xs-12 col-sm-3 col-md-3 img-rounded" />
                                         <p><i>Jean William Fritz Piaget (1896-1980)</i> fue uno de los psicólogos e investigadores más importantes de la historia, y a él le debemos gran parte de lo que hemos ido descubriendo por medio de la psicología del
                                             desarrollo. Dedicó gran parte de su vida a investigar el modo en el que evolucionan tanto nuestro conocimiento acerca del entorno como nuestros patrones de pensamiento dependiendo de la etapa de crecimiento
                                             en la que nos encontramos, y es especialmente conocido por haber propuesto varias etapas de desarrollo cognitivo por las que pasamos todos los seres humanos a medida que crecemos.</p>
@@ -520,66 +520,24 @@
                         <h4 class="modal-title" id="myModalVideoLabel">Videos Educativos...</h4>
                     </div>
                     <div class="modal-body">
-                        <!-- Media Start -->
-                        <div class="media">
-                            <div class="media-left">
-                                <a href="https://youtu.be/QZXBi7Vuv3c" target="_blank">
-                                    <img class="media-object" src="https://i.ytimg.com/vi/QZXBi7Vuv3c/hqdefault.jpg?custom=true&w=246&h=138&stc=true&jpg444=true&jpgq=90&sp=68&sigh=PCn2dzhcUVIBFdFQjBSZaFJyJ-k" alt="Portal Educapeques TV" width="150px">
-                                </a>
-                            </div>
-                            <div class="media-body">
-                                <h4 class="media-heading">Etapas del Desarrollo Cognitivo del Niño</h4> Es importante que conozcamos cuales son estas etapas del desarrollo cognitivo y qué las caracteriza para entender la mentalidad de los niños y niñas...
-                            </div>
+                        <div>
+                          <iframe width="100%" height="315" src="https://www.youtube.com/embed/QZXBi7Vuv3c" frameborder="0" allowfullscreen></iframe>
                         </div>
-                        <!-- Media End -->
-                        <!-- Media Start -->
-                        <div class="media">
-                            <div class="media-left">
-                                <a href="https://youtu.be/J7LFJnWZH74" target="_blank">
-                                    <img class="media-object" src="https://i.ytimg.com/vi/J7LFJnWZH74/hqdefault.jpg?custom=true&w=246&h=138&stc=true&jpg444=true&jpgq=90&sp=68&sigh=AtoFxttoMsdHdhkA9v0-PljXan8" alt="Luis Rodriguez Zalazar" width="150px">
-                                </a>
-                            </div>
-                            <div class="media-body">
-                                <h4 class="media-heading">Teoría del Desarrollo Cognitivo de Piaget</h4> Ideas Clave: La cognición, Los esquemas, Adaptación (Asimilación y Acomodación)...
-                            </div>
+                        <hr>
+                        <div>
+                          <iframe width="100%" height="315" src="https://www.youtube.com/embed/J7LFJnWZH74" frameborder="0" allowfullscreen></iframe>
                         </div>
-                        <!-- Media End -->
-                        <!-- Media Start -->
-                        <div class="media">
-                            <div class="media-left">
-                                <a href="https://youtu.be/nLwAf4xHcmM" target="_blank">
-                                    <img class="media-object" src="https://i.ytimg.com/vi/nLwAf4xHcmM/hqdefault.jpg?custom=true&w=246&h=138&stc=true&jpg444=true&jpgq=90&sp=68&sigh=moet2z811-0-wN5E5AaRq-xZ4Fg" alt="Daniela Calvo" width="150px">
-                                </a>
-                            </div>
-                            <div class="media-body">
-                                <h4 class="media-heading">Desarrollo Cognitivo en la Adolescencia</h4> Desarrollo cognitivo en la adolescencia...
-                            </div>
+                        <hr>
+                        <div>
+                          <iframe width="100%" height="315" src="https://www.youtube.com/embed/nLwAf4xHcmM" frameborder="0" allowfullscreen></iframe>
                         </div>
-                        <!-- Media End -->
-                        <!-- Media Start -->
-                        <div class="media">
-                            <div class="media-left">
-                                <a href="https://youtu.be/1uXHNI9MTLE" target="_blank">
-                                    <img class="media-object" src="https://i.ytimg.com/vi/1uXHNI9MTLE/hqdefault.jpg?custom=true&w=246&h=138&stc=true&jpg444=true&jpgq=90&sp=68&sigh=V_iE0ITt8Xi0at77vGxoUjZncWI" alt="Nereida Lahoz" width="150px">
-                                </a>
-                            </div>
-                            <div class="media-body">
-                                <h4 class="media-heading">Psicologia del Desarrollo Cogntivo</h4> Desarrollo cognitivo...
-                            </div>
+                        <hr>
+                        <div >
+                          <iframe width="100%" height="315" src="https://www.youtube.com/embed/KL6JcmlhtO8" frameborder="0" allowfullscreen></iframe>                        </div>
+                        <hr>
+                        <div>
+                          <iframe width="100%" height="315" src="https://www.youtube.com/embed/vRalfk5KFVw" frameborder="0" allowfullscreen></iframe>
                         </div>
-                        <!-- Media End -->
-                        <!-- Media Start -->
-                        <div class="media">
-                            <div class="media-left">
-                                <a href="https://youtu.be/vRalfk5KFVw" target="_blank">
-                                    <img class="media-object" src="https://i.ytimg.com/vi/vRalfk5KFVw/hqdefault.jpg?custom=true&w=246&h=138&stc=true&jpg444=true&jpgq=90&sp=68&sigh=lFlBE3_N5OZ4oZ7cHRCkOfysNKs" alt="Clase Psicologia" width="150px">
-                                </a>
-                            </div>
-                            <div class="media-body">
-                                <h4 class="media-heading">El Desarrollo Cognitivo del Bebe</h4> Desarrollo cognitivo del bebe...
-                            </div>
-                        </div>
-                        <!-- Media End -->
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
