Improve responsive design and publish final project

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,10 @@
     <meta name="keywords" content="cognitivo, codetrotters, web development, final project" />
     <meta name="author" content="Arturo Santiago-Rivera" />
     <meta name="designer" content="Arturo Santiago-Rivera" />
+    <!-- arsari favicon and modile capable -->
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" sizes="16x16" />
     <!-- CSS & Fonts libraries -->
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.css" media="all" title="Bootstrap v3.3.7" />
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap-theme.css" media="all" title="" />
@@ -137,7 +141,7 @@
                     <div class="col-xs-12 col-sm-12 col-md-12 collapse" id="welcome">
                         <div class="well">
                             <img src="assets/images/image7.png" alt="Vianca" class="col-xs-6 col-sm-3 col-md-3 img-circle img-responsive" />
-                            <p>El proyecto de pagina Web aqui creado, esta motivado en el aprendizaje del desarrollo pensamiento de mis nietas, Anabella y Vianca, basado en la teoría del desarrollo cognitivo, o tambien llamado desarrollo cognoscitivo, de
+                            <p>El proyecto de pagina Web aqui desarrollado, esta motivado en el aprendizaje del desarrollo del pensamiento de mis nietas, Anabella y Vianca, según la teoría del desarrollo cognitivo, o tambien llamado desarrollo cognoscitivo, de
                                 <a tabindex="0" role="button" data-placement="auto left" data-toggle="popover" data-trigger="focus" title="Jean William Fritz Piaget (1896-1980)" data-content="Famoso por sus aportes al estudio de la infancia y por su teoría constructivista del desarrollo de la inteligencia.">
                                     <span>Jean Piaget</span></a>. La teoría de Piaget es una sobre la naturaleza y el desarrollo de la inteligencia humana. Piaget creía que la infancia del individuo juega un papel vital y activo con el crecimiento de
                                 la inteligencia, y que el niño aprende a través de hacer y explorar activamente. Las fases de desarrollo expuestas por Piaget forman una secuencia de cuatro etapas que a su vez se dividen en otras subetapas. Estas cuatro
