Fix popover for smartphone

--- a/public/index.html
+++ b/public/index.html
@@ -142,7 +142,7 @@
                         <div class="well">
                             <img src="assets/images/image7.png" alt="Vianca" class="col-xs-6 col-sm-3 col-md-3 img-circle img-responsive" />
                             <p>El proyecto de pagina Web aqui desarrollado, esta motivado en el aprendizaje del desarrollo del pensamiento de mis nietas, Anabella y Vianca, según la teoría del desarrollo cognitivo, o tambien llamado desarrollo cognoscitivo, de
-                                <a tabindex="0" role="button" data-placement="auto left" data-toggle="popover" data-trigger="focus" title="Jean William Fritz Piaget (1896-1980)" data-content="Famoso por sus aportes al estudio de la infancia y por su teoría constructivista del desarrollo de la inteligencia.">
+                                <a tabindex="0" role="button" data-placement="auto right" data-toggle="popover" data-trigger="focus" title="Jean William Fritz Piaget (1896-1980)" data-content="Famoso por sus aportes al estudio de la infancia y por su teoría constructivista del desarrollo de la inteligencia.">
                                     <span>Jean Piaget</span></a>. La teoría de Piaget es una sobre la naturaleza y el desarrollo de la inteligencia humana. Piaget creía que la infancia del individuo juega un papel vital y activo con el crecimiento de
                                 la inteligencia, y que el niño aprende a través de hacer y explorar activamente. Las fases de desarrollo expuestas por Piaget forman una secuencia de cuatro etapas que a su vez se dividen en otras subetapas. Estas cuatro
                                 etapas principales quedan enumeradas y explicadas brevemente a continuación.
