Improve smartphone browsing

--- a/public/index.html
+++ b/public/index.html
@@ -141,8 +141,9 @@
                     <div class="col-xs-12 col-sm-12 col-md-12 collapse" id="welcome">
                         <div class="well">
                             <img src="assets/images/image7.png" alt="Vianca" class="col-xs-6 col-sm-3 col-md-3 img-circle img-responsive" />
-                            <p>El proyecto de pagina Web aqui desarrollado, esta motivado en el aprendizaje del desarrollo del pensamiento de mis nietas, Anabella y Vianca, según la teoría del desarrollo cognitivo, o tambien llamado desarrollo cognoscitivo, de
-                                <a tabindex="0" role="button" data-placement="auto right" data-toggle="popover" data-trigger="focus" title="Jean William Fritz Piaget (1896-1980)" data-content="Famoso por sus aportes al estudio de la infancia y por su teoría constructivista del desarrollo de la inteligencia.">
+                            <p>El proyecto de pagina Web aqui desarrollado, esta motivado en el aprendizaje del desarrollo del pensamiento de mis nietas, Anabella y Vianca, según la teoría del desarrollo cognitivo, o tambien llamado desarrollo cognoscitivo,
+                                de
+                                <a tabindex="0" role="button" data-toggle="popover" data-trigger="focus" data-placement="auto" title="Jean William Fritz Piaget (1896-1980)" data-content="Famoso por sus aportes al estudio de la infancia y por su teoría constructivista del desarrollo de la inteligencia.">
                                     <span>Jean Piaget</span></a>. La teoría de Piaget es una sobre la naturaleza y el desarrollo de la inteligencia humana. Piaget creía que la infancia del individuo juega un papel vital y activo con el crecimiento de
                                 la inteligencia, y que el niño aprende a través de hacer y explorar activamente. Las fases de desarrollo expuestas por Piaget forman una secuencia de cuatro etapas que a su vez se dividen en otras subetapas. Estas cuatro
                                 etapas principales quedan enumeradas y explicadas brevemente a continuación.
@@ -166,11 +167,11 @@
                     <div class="container collapse-left">
                         <div class="col-xs-12 col-sm-10 col-md-10 collapse" id="collapse-1">
                             <div class="well">
-                                <video type="video/mp4" src="assets/images/anabella-video.m4v" autoplay muted loop poster class="col-xs-6 col-sm-3 col-md-3"></video>
+                                <video type="video/mp4" src="assets/images/anabella-video.m4v" autoplay muted loop poster playsinline class="col-xs-6 col-sm-3 col-md-3"></video>
                                 <p>Esta etapa abarca desde el nacimiento del individuo hasta los 2 años de edad. Es el aprendizaje que se lleva a cabo a través de los sentidos y las posibles representaciones que la memoria haga de los objetos y situaciones
                                     a las que el individuo se enfrenta. En esta etapa la imitación es la respuesta al aprendizaje. La inteligencia de los niños y niñas es práctica, centrada en el sí mismo, y en el momento presente en el aquí y ahora.
                                     El niño se relaciona con el mundo a través de los sentidos y la acción.<br><br>A lo largo de este periodo se producen importantes adquisiciones, la acción de los bebés evoluciona desde los reflejos innatos, que se convierten
-                                    en hábitos. Poco después aparecen las <a type="button" class="note" data-toggle="tooltip" data-placement="top" title="Acciones encaminadas a mantener un resultado.">reacciones circulares</a> y con estas los primeros
+                                    en hábitos. Poco después aparecen las <a type="button" class="note" data-toggle="tooltip" data-placement="auto" title="Acciones encaminadas a mantener un resultado.">reacciones circulares</a> y con estas los primeros
                                     esquemas mentales. Las seis sub-etapas del periodo sensoriomotor van pasando de una a otra en medida que se van desarrollando los esquemas del bebé. Un esquema es un patrón organizado de la conducta. Los primeros reflejos
                                     simples, progresan a conductas con una finalidad. Cuando estas son placenteras el bebé las repite y crea un ciclo que Piaget denomina reacciones circulares primarias.</p>
                                 <!-- Collapse accordion start -->
@@ -223,7 +224,7 @@
                                         <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
                                             <div class="panel-body">
                                                 <p>Reacciones circulares secundarias se dice que es el principio de la acción intencional. Coincide con el momento en el que nace su interés por alcanzar objetos manipulables en el <a type="button" class="note"
-                                                        data-toggle="tooltip" data-placement="top" title="biberón, chupa, etc.">ambiente</a> se repiten los comportamientos para ver resultados ajenos al cuerpo. En esta etapa empieza a desarrollarse la permanencia
+                                                        data-toggle="tooltip" data-placement="auto" title="biberón, chupa, etc.">ambiente</a> se repiten los comportamientos para ver resultados ajenos al cuerpo. En esta etapa empieza a desarrollarse la permanencia
                                                     del objeto. Lo busca si puede ver una parte de él.<br><br>Imitación: es capaz de realizar imitaciones voluntarias y sistemáticas de sonidos y movimientos hechos por un modelo. Sólo pueden ser conductas
                                                     que estén en su repertorio.</p>
                                             </div>
@@ -241,7 +242,7 @@
                                         </div>
                                         <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
                                             <div class="panel-body">
-                                                <p>Coordinación de esquemas secundarios y aplicación a situaciones nuevas la intencionalidad es plena, las conductas tienen un propósito definido y los <a type="button" class="note" data-toggle="tooltip" data-placement="top"
+                                                <p>Coordinación de esquemas secundarios y aplicación a situaciones nuevas la intencionalidad es plena, las conductas tienen un propósito definido y los <a type="button" class="note" data-toggle="tooltip" data-placement="auto"
                                                         title="girar la cabeza, abrir la mano, etc.">esquemas motores</a> se coordinan para lograr fines (que le den algo) capaz de resolver problemas nuevos a partir de experiencias pasadas. Se imagina mentalmente
                                                     lo que quiere y lo busca, planificando formas de conseguirlo. Busca objetos ocultos, pero con limitaciones. Si se esconde un objeto en A y luego en B, lo busca en A. Imita sonidos, movimientos y gestos
                                                     nuevos a él.</p>
@@ -352,7 +353,7 @@
                         <div class="col-xs-12 col-sm-10 col-sm-offset-2 col-md-10 col-md-offset-2 collapse" id="collapse-4">
                             <div class="well">
                                 <img src="assets/images/etapa4.jpg" alt="Operaciones Formales" class="col-xs-6 col-sm-3 col-md-3 img-responsive" />
-                                <p>Es la etapa final del <a type="button" class="note" data-toggle="tooltip" data-placement="bottom" title="Desde los doce años en adelante.">desarrollo cognitivo</a>, los niños comienzan a desarrollar una visión más abstracta
+                                <p>Es la etapa final del <a type="button" class="note" data-toggle="tooltip" data-placement="auto" title="Desde los doce años en adelante.">desarrollo cognitivo</a>, los niños comienzan a desarrollar una visión más abstracta
                                     del mundo y a utilizar la lógica formal. Se logra la abstracción sobre conocimientos concretos observados, lo cual permite emplear el razonamiento lógico inductivo y deductivo. Puede formular hipótesis, tiene en cuenta
                                     el mundo de lo posible. Pueden aplicar la reversibilidad y la conservación a las situaciones tanto reales como imaginadas. También desarrollan una mayor comprensión del mundo y de la idea de causa y efecto.<br><br>Esta
                                     etapa se caracteriza por la capacidad para formular hipótesis y ponerlas a prueba para encontrar la solución a un problema. Otra característica del individuo en esta etapa es su capacidad para razonar en contra de los
@@ -375,9 +376,9 @@
                 <div class="col-sm-3">
                     <h5>Comenzando</h5>
                     <ul>
-                        <li><a href="#">Inicio</a></li>
+                        <li><a class="anylink" href="#">Inicio</a></li>
                         <li><a role="button" data-toggle="collapse" href="#welcome" aria-expanded="false" aria-controls="welcome" class="wl">Bienvenida</a></li>
-                        <li><a href="#myContent" mytitle2="Etapas del Desarrollo Cognitivo">Estadios</a></li>
+                        <li><a class="anylink" href="#myContent" mytitle2="Etapas del Desarrollo Cognitivo">Estadios</a></li>
                         <li><a href="#myModalVideo" data-toggle="modal" data-target="#myModalVideo">Videos</a></li>
                     </ul>
                 </div>
@@ -407,7 +408,7 @@
         </div>
         <div class="second-bar">
             <div class="container">
-                <h2 class="logo"><a href="#"><img src="assets/images/galogo_trans.gif" alt="Grupo Arsari Logo"></a></h2>
+                <h2 class="logo anylink"><a href="#"><img src="assets/images/galogo_trans.gif" alt="Grupo Arsari Logo"></a></h2>
                 <div class="social-icons">
                     <a href="https://www.twitter.com/arq_asr" target="_blank" class="twitter"><i class="fa fa-twitter"></i></a>
                     <a href="https://www.facebook.com/arq.asr" target="_blank" class="facebook"><i class="fa fa-facebook"></i></a>
@@ -425,7 +426,7 @@
                     </div>
                     <div class="modal-body">
                         <p>
-                            <a tabindex="0" role="button" data-toggle="popover" data-trigger="focus" title="Jean William Fritz Piaget (1896-1980)" data-content="Famoso por sus aportes al estudio de la infancia y por su teoría constructivista del desarrollo de la inteligencia.">
+                            <a tabindex="0" role="button" data-toggle="popover" data-trigger="focus" data-placement="auto" title="Jean William Fritz Piaget (1896-1980)" data-content="Famoso por sus aportes al estudio de la infancia y por su teoría constructivista del desarrollo de la inteligencia.">
                                 <span>Jean Piaget</span></a> señaló que la realidad es un sistema dinámico en continuo cambio y, como tal, se define en referencia a las dos condiciones que definen los sistemas dinámicos. En concreto, argumentó que el
                             desarrollo implica transformaciones y etapas. Las transformaciones se refieren a toda clase de cambios que una cosa o persona puede experimentar. Los Estados se refieren a las condiciones o las apariencias en el que las cosas
                             o las personas pueden ser encontrados entre las transformaciones.</p>
