--- a/public/index.html
+++ b/public/index.html
@@ -19,8 +19,8 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" sizes="16x16" />
     <!-- css & fonts libraries -->
-    <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.css" media="all" title="Bootstrap v3.3.7" />
-    <link rel="stylesheet" type="text/css" href="assets/css/bootstrap-theme.css" media="all" title="" />
+  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" media="all" title="Bootstrap v3.3.7" />
+  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous" media="all" title="" />
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" media="all" title="" />
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto" media="all" title="" />
     <link rel="stylesheet" type="text/css" href="assets/css/app.css" media="all" title="" />
@@ -39,7 +39,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         </button>
-                    <a class="navbar-brand" href="#">Grupo Arsari <b> | </b><span> v1.2.170128</span></a>
+                    <a class="navbar-brand" href="#">Grupo Arsari <b> | </b><span> v1.3.170603</span></a>
                 </div>
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -569,7 +569,7 @@
         </div>
         <!-- Modal end -->
         <!-- Modal Video start -->
-        <div class="modal fade" id="myModalVideo" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal fade" id="myModalVideo" tabindex="-1" role="dialog" aria-labelledby="myModalVideoLabel">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -604,7 +604,7 @@
         </div>
         <!-- Modal Video end -->
         <!-- Modal Form start -->
-        <div class="modal fade" id="myModalForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal fade" id="myModalForm" tabindex="-1" role="dialog" aria-labelledby="myModalFormLabel">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -632,8 +632,8 @@
         </div>
     </footer>
     <!-- Scripts libraries -->
-    <script type="text/javascript" src="assets/js/jquery.js" title="jQuery v1.12.2"></script>
-    <script type="text/javascript" src="assets/js/bootstrap.js" title="Bootstrap v3.3.7"></script>
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js" title="jQuery v3.1.1"></script>
+  <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous" title="Bootstrap v3.3.7"></script>
     <script type="text/javascript" src="assets/js/app.js" title="My Script"></script>
 </body>
 
